fix: lower auth button z-index below version dropdown

--- a/src/index.css
+++ b/src/index.css
@@ -1384,7 +1384,7 @@ body {
   position: absolute;
   top: 4rem;
   right: 1.5rem;
-  z-index: 10;
+  z-index: 9;
 }
 
 .auth-signin-trigger {
